agregue los elementos del menú y un par de recordatorios acordes para mas adelante

--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>TP FINAL 1</title>
 </head>
 <body>
-    <header>
-        
+    <header>    <!--usar display flex con align item center y justify en space around-->
+                <!--Ver position para q te siga el logo-->
+        <img src="" alt=""> <!--LOGO DE LA PAGINA-->
+        <nav>
+            <a href="index.html">HERRERA</a>
+            <a href="">Home</a>
+            <a href="">Speciality</a>
+            <a href="">Portfolio</a>
+            <a href="">Contact</a>
+        </nav>
     </header>
+
     <main>
 
     </main>
+
     <footer>
 
     </footer>
