finalice con la estructura basica html de toda la pagina

--- a/index.html
+++ b/index.html
@@ -20,11 +20,127 @@
     </header>
 
     <main>
+        <section> <!--Inicio del hero-->
+            <img src="" alt="">
+            <h1>My name is <b>Paschenko Ruslan</b></h1>
+            <p>I'm:</p>
+            <p>Web Developer   And   Web Designer</p>
+            <button>Contact With Me</button>
+            <hr>
+        </section> <!--Fin del hero-->
 
+        <section> <!--Inicio de la seccion Speciality-->
+            <h2>Speciality</h2>
+            <section>
+                <h3>UI & UX Design</h3>
+                <h3>Front-end Developer</h3>
+                <h3>Back-end Developer</h3>
+            </section>
+            <section>
+                <p>My favorite pastime is design. I work as a designer not because it brings me money, but primarily because I like it. I have good taste and a sharp eye</p>
+                <p>Another favorite thing of mine is frontend development. I make a website of any complexity for you and adapt it. I write clear code that is easy to work with in the future</p>
+                <p>I'm new to the backend. But I can do simple things that are needed 90% of the time.</p>
+            </section>
+            <hr>
+        </section> <!--Fin de la seccion Speciality-->
+
+        <section> <!--Inicio de la seccion Skills-->
+            <h2>Skills</h2>
+            <div>
+                <img src="" alt="">
+                <h3>HTML 5</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolore quos earum ex vel mollitia dolor exercitationem illum, facere doloremque ducimus blanditiis totam repellat consequatur placeat, quisquam quo, nam corporis.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>CSS</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolore quos earum ex vel mollitia dolor exercitationem illum, facere doloremque ducimus blanditiis totam repellat consequatur placeat, quisquam quo, nam corporis.</p>
+            </div>
+            <div><img src="" alt="">
+                <h3>JAVA SCRIPT</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolore quos earum ex vel mollitia dolor exercitationem illum, facere doloremque ducimus blanditiis totam repellat consequatur placeat, quisquam quo, nam corporis.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>JQUERY</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolore quos earum ex vel mollitia dolor exercitationem illum, facere doloremque ducimus blanditiis totam repellat consequatur placeat, quisquam quo, nam corporis.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>PHP</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolore quos earum ex vel mollitia dolor exercitationem illum, facere doloremque ducimus blanditiis totam repellat consequatur placeat, quisquam quo, nam corporis.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>REACT</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolore quos earum ex vel mollitia dolor exercitationem illum, facere doloremque ducimus blanditiis totam repellat consequatur placeat, quisquam quo, nam corporis.</p>
+            </div>
+
+            <section>
+                <div>
+                    <img src="" alt="">
+                    <p>Figma</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>Adobe Photoshop</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>Adobe XD</p>
+                </div>
+            </section>
+            <hr>
+        </section><!--fin de la seccion Skills-->
+
+        <section><!--Inicio de la seccion Portfolio-->
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <button>See More</button>
+            <hr>
+        </section><!--Fin de la seccion Portfolio-->
+
+        <section><!--inicio de la seccion about me-->
+            <h2>Some <br>About <br> Me </h2>
+            <p>Hey! My name is Ruslan and I am a front-end developer and web designer. I graduated from such courses as: GeekBrains - in front-end development and Moscow Digital Academy in the field of web design. At the moment I am studying and diving deeper into web development. I am a student at Moscow University, studying in the direction of the Programmer.</p>
+            <p>I believe that the most important thing in life is to find yourself and what you like. I am very glad that I have chosen this path. This motivates me and so I move on. Patience and a little effort</p>
+            <h2>What</h2>
+            <h2>Can</h2>
+            <h2>I Offer</h2>
+            <h2>You</h2>
+            <p>Working with me - you will receive quality work from me. I give my best and understand the client / employer | well. I also learn and adapt quickly!</p>
+            <hr>
+        </section><!--fin de la seccion about me-->
+
+        <section><!--inicio de la seccion contact me-->
+            <h2>Contact With Me</h2>
+            <div>
+                <img src="" alt=""> <!--logo-->
+                <form action="">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Phone">
+                    <input type="text" placeholder="Message">
+                    <button>Send</button>
+                    <input type="file">
+                </form>
+            </div>
+            <div>
+                <h3>Let's Work!</h3>
+                <p>I am always ready to consider your proposal. You just need to write to me. If you are not comfortable doing this through a website, then here are the networks that can help you 
+                </p>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </section><!--fin de la seccion contact me-->
     </main>
 
     <footer>
-
     </footer>
 </body>
 </html>
