--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <section> <!--Inicio del hero-->
             <img src="" alt="">
             <h1>My name is <b>Paschenko Ruslan</b></h1>
-            <p>I'm:</p>
-            <p>Web Developer   And   Web Designer</p>
+            <h2 class="hero im">I'm:</h2>
+            <h2 class="hero">Web Developer   And   Web Designer</h2>
             <button>Contact With Me</button>
             <hr>
         </section> <!--Fin del hero-->
