seccion speciality terminada

--- a/index.html
+++ b/index.html
@@ -45,18 +45,23 @@
         <hr>        
         <!--Fin del hero-->
 
-        <section> <!--Inicio de la seccion Speciality-->
-            <h2>Speciality</h2>
-            <section>
-                <h3>UI & UX Design</h3>
-                <h3>Front-end Developer</h3>
-                <h3>Back-end Developer</h3>
+        <section class="speciality"> <!--Inicio de la seccion Speciality-->
+            <h2 class="sptitle">Speciality</h2>
+            <section class="spboxes">
+                <div class="boxes">
+                    <h3 class="sptitle">UI & UX Design</h3>
+                    <p>My favorite pastime is design. I work as a designer not because it brings me money, but primarily because I like it. I have good taste and a sharp eye</p>
+                </div>
+                <div class="boxes">
+                    <h3 class="sptitle">Front-end Developer</h3>
+                    <p>Another favorite thing of mine is frontend development. I make a website of any complexity for you and adapt it. I write clear code that is easy to work with in the future</p>
+                </div>
+                <div class="boxes">
+                    <h3 class="sptitle">Back-end Developer</h3>
+                    <p>I'm new to the backend. But I can do simple things that are needed 90% of the time.</p>
+                </div>
             </section>
-            <section>
-                <p>My favorite pastime is design. I work as a designer not because it brings me money, but primarily because I like it. I have good taste and a sharp eye</p>
-                <p>Another favorite thing of mine is frontend development. I make a website of any complexity for you and adapt it. I write clear code that is easy to work with in the future</p>
-                <p>I'm new to the backend. But I can do simple things that are needed 90% of the time.</p>
-            </section>
+            
             <hr>
         </section> <!--Fin de la seccion Speciality-->
 
