modificaciones al tamaño de la seccion skills y estilizado de secciones portfolio y about me

--- a/index.html
+++ b/index.html
@@ -143,31 +143,54 @@
             <hr>
         </section><!--fin de la seccion Skills-->
 
-        <section><!--Inicio de la seccion Portfolio-->
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <button>See More</button>
-            <hr>
+        <section class="portfolio"><!--Inicio de la seccion Portfolio-->
+            <h2 class="title">Portfolio</h2>
+            <div class="portfoliorow">
+                <img src="img/ej.png" class="portfolioimg" alt="">
+                <img src="img/ej.png" class="portfolioimg" alt="">
+                <img src="img/ej.png" class="portfolioimg" alt="">
+            </div>
+            <div class="portfoliorow">
+                <img src="img/ej.png" class="portfolioimg" alt="">
+                <img src="img/ej.png" class="portfolioimg" alt="">
+                <img src="img/ej.png" class="portfolioimg" alt="">
+            </div>
+            <button class="portfoliobutton">See More</button>
         </section><!--Fin de la seccion Portfolio-->
 
-        <section><!--inicio de la seccion about me-->
-            <h2>Some <br>About <br> Me </h2>
-            <p>Hey! My name is Ruslan and I am a front-end developer and web designer. I graduated from such courses as: GeekBrains - in front-end development and Moscow Digital Academy in the field of web design. At the moment I am studying and diving deeper into web development. I am a student at Moscow University, studying in the direction of the Programmer.</p>
-            <p>I believe that the most important thing in life is to find yourself and what you like. I am very glad that I have chosen this path. This motivates me and so I move on. Patience and a little effort</p>
-            <h2>What</h2>
-            <h2>Can</h2>
-            <h2>I Offer</h2>
-            <h2>You</h2>
-            <p>Working with me - you will receive quality work from me. I give my best and understand the client / employer | well. I also learn and adapt quickly!</p>
-            <hr>
+        <section class="about"><!--inicio de la seccion about me-->
+            <h2>Some</h2> <h2>About</h2> <h2>Me</h2>
+            <div class="aboutbox1">
+                <p class="abouttext">Hey! My name is Ruslan and I am a front-end developer and web designer. I graduated from such courses as: GeekBrains - in front-end development and Moscow Digital Academy in the field of web design. At the moment I am studying and diving deeper into web development. I am a student at Moscow University, studying in the direction of the Programmer.</p>
+                <br>
+                <br>
+                <p class="abouttext">I believe that the most important thing in life is to find yourself and what you like. I am very glad that I have chosen this path. This motivates me and so I move on. Patience and a little effort</p>    
+            </div>
+            
+            <section class="aboutbox2">
+                <div>
+                    <h2>What</h2>
+                    <h2>Can</h2>
+                    <h2>I Offer</h2>
+                    <h2>You</h2>
+                </div>
+                <div>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <p class="abouttext">Working with me - you will receive quality work from me. I give my best and understand the client / employer well. I also learn and adapt quickly!</p>
+                </div>
+            </section>
+            
         </section><!--fin de la seccion about me-->
 
         <section><!--inicio de la seccion contact me-->
-            <h2>Contact With Me</h2>
+            <h2 class="title">Contact With Me</h2>
             <div>
                 <img src="" alt=""> <!--logo-->
                 <form action="">
